# build_240522

./: .gitignore  Android.bp  Android.mk  Changes.md  CleanSpec.mk  Deprecation.md  METADATA  OWNERS  README.md  README.txt  README2.md  Usage.txt  banchanHelp.sh  buildspec.mk.default  citcsetup.sh  cogsetup.sh  common_targets.txt  envsetup.sh  finalize-aidl-vndk-sdk-resources.sh  finalize-sdk-rel.sh  finalize-step-1-for-build-target.sh  finalize-step-1.sh  finalize-step-2-for-build-target.sh  finalize-step-2.sh  finalize_branch_for_release.sh  groups  help.sh  navbar.md  project.config  rbesetup.sh  setup-android-build.sh  shell_utils.sh  sub.sh  tapasHelp.sh
bazel/: toplevel.WORKSPACE
ci/: Android.bp  branch_specific_targets  build_android_metadata  build_android_metadata.py  build_test_suites  build_test_suites-trunk_staging  build_test_suites.py  build_test_suites_local_test.py  build_test_suites_test.py  build_test_suites_trunk_staging.py  build_test_suites_x86_64-trunk_staging  ci_test_lib.py  filter_teams.sh  make_teams_files.sh  test_mapping_module_retriever.py  test_mapping_parser.py  test_suites  test_suites_x86_64_trunk_staging_targets.cfg
common/: core.mk  json.mk  math.mk  strings.mk
core/: BUILD.bazel  Makefile  OWNERS  aapt2.mk  all_versions.bzl  allowed_ndk_types.mk  android_manifest.mk  android_soong_config_vars.mk  android_vts_host_config.mk  apidiff.mk  app_certificate_validate.mk  app_prebuilt_internal.mk  arm64_vs_x86_64.diff  arm_vs_x86.diff  (+204 more)
tools/fetch_artifact/: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  fetch_artifact.go
(+975 files in other folders)
